# GPU_Ray_Tracer

./: .gitignore  README.md  hittable.h  ray.h  utils.h  vec3.h
cuda-raytracer/: CMakeLists.txt  build.sh  camera.h  camera_params.h  color.h  hittable.h  hittable_list.h  kernels.cu  main.cpp  material.h  ray.h  scenes.h  sphere.h  utils.h  vec3.h
